# aura-lend

./: .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .prettierrc  Anchor.toml  BIG_O_OPTIMIZATIONS.md  CI_TROUBLESHOOTING.md  Cargo.toml  FASE3.md  README.md  UPGRADE_GUIDE.md  clippy.toml  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.github/: DEPLOYMENT_CHECKLIST.md
.github/workflows/: ci.yml  deploy.yml  health-check.yml  main.yml  security-scan.yml
docs/: API_GUIDE.md  DEVELOPMENT_GUIDE.md  SECURITY_GUIDE.md
programs/aura-lend/: Cargo.toml
programs/aura-lend/src/: constants.rs  error.rs  instructions.rs  lib.rs  migration.rs  state.rs  utils.rs
programs/aura-lend/src/instructions/: batch_operations.rs  borrowing_instructions.rs  config_instructions.rs  governance_instructions.rs  lending_instructions.rs  liquidation_instructions.rs  market_instructions.rs  migration_instructions.rs  multisig_instructions.rs  oracle_instructions.rs  timelock_instructions.rs  upgrade_instructions.rs
programs/aura-lend/src/state/: governance.rs  market.rs  multisig.rs  obligation.rs  obligation_optimized.rs  reserve.rs  timelock.rs
programs/aura-lend/src/utils/: config.rs  iterator_optimized.rs  logging.rs  math.rs  math_optimized.rs  memory_optimized.rs  metrics.rs  mod.rs  oracle.rs  pagination.rs  pagination_optimized.rs  rbac.rs  token.rs
scripts/upgrade/: deploy.ts  migration.ts
sdk/src/: client.ts  index.ts  (+1 more)
tests/: aura-lend.ts  config.test.ts  governance.test.ts  performance.test.ts  security.test.ts  smoke.test.ts  upgrade.test.ts
(+11 files in other folders)
