[package]
name = "aura-lend"
version = "0.1.0"
description = "Aura Lend - Autonomous lending protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_lend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = [
    "anchor-lang/anchor-debug"
]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "0.6.0"
# switchboard-on-demand = "=0.1.10"  # Temporarily disabled due to Windows build issues
solana-program = "1.18.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
arrayref = "0.3.7"
num-traits = "0.2.17"
num-derive = "0.4.1"
thiserror = "1.0.56"